<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/img_1"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".Activties.baseActivity">
    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
         android:layout_height="60dp"
        app:strokeWidth="3dp"
        android:text="@string/employee"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:id="@+id/toEmployee"
        android:fontFamily="casual"
        android:textSize="9pt"
        app:strokeColor="@color/white"
        android:textStyle="bold|italic"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="60dp"
        app:strokeWidth="3dp"
        android:textAllCaps="false"
        android:id="@+id/toCustomer"

        android:layout_marginTop="10dp"
        android:text="@string/customer"
        android:textColor="@color/black"
        android:fontFamily="casual"
        android:textSize="9pt"
        android:textStyle="bold|italic"
        app:strokeColor="@color/white"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="60dp"
        app:strokeWidth="3dp"
        android:textAllCaps="false"
        android:layout_marginTop="100dp"
        android:text="@string/location"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        android:fontFamily="casual"
        android:textSize="9pt"
        android:id="@+id/Location"
        app:strokeColor="@color/black"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />

</LinearLayout>